# holochain-react-apollo-graphql-starter

./: Cargo.toml  README.md  package.json
dnas/feed/workdir/: dna.yaml
dnas/feed/zomes/coordinator/posts/: Cargo.toml
dnas/feed/zomes/coordinator/posts/src/: lib.rs
tests/src/feed/posts/: common.ts
ui/: package.json
ui/src/: App.tsx
ui/src/feed/posts/: types.ts
workdir/: happ.yaml  web-happ.yaml
