[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
serde = "1.0"

[workspace.dependencies.posts]
path = "dnas/feed/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/feed/zomes/integrity/posts"
